--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     ext.kotlin_version = '1.3.21'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        jcenter{url "http://jcenter.bintray.com/"}
+
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +20,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+        jcenter{url "http://jcenter.bintray.com/"}
+
+
     }
 }
 
